# stars_project

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1891f9f150a9_create_orders_tasks_tasks_comletion_.py  25b6d2f3b791_.py  299ecaf1e0cc_creata_index_for_frozen_balance.py  30febb0c8aed_add_new_column_refferal_earned_to_user_.py  35ad4877f882_merge_branches.py  56ee6dc773d7_add_new_columns.py  6b0496b89421_init_users_table.py  b5519fea6d00_update_column_amount_stars.py  c0d526b8b18d_.py  d9d55fb3711a_update_orders_table.py  e7a27e547430_new_table_transactions_log.py  e8b228bd03f9_update_orders_table.py  ee7f40dc8b20_.py  f9e09b90e837_sync_autogenerate.py
app/: celery_app.py  config.py  database.py  models.py
app/api/: admin.py  dependencies.py  finances.py  tasks.py  users.py  webhooks.py
app/models/: __init__.py  order.py  pending_payments.py  task.py  transaction_log.py  user.py  withdrawal_request.py
app/orm/: orders_orm.py  pending_payment_orm.py  procces_leave_orm.py  tasks_orm.py  users_orm.py  withdraw_orm.py
app/schemas/: admin.py  finances.py  order.py  task.py  user.py
backend/: Dockerfile  main.py  todo
backend/alembic/: env.py
backend/app/: celery_app.py  database.py
backend/tg_bot/: run_bot.py
frontend/: Dockerfile  nginx.conf  vite.config.js
frontend/src/: App.css  App.jsx
tg_bot/: run_bot.py
tg_bot/handlers/: admin.py  admin_orders.py  admin_tasks.py  admin_withdraw.py
tg_bot/keyboards/: inline.py
tg_bot/middlewares/: auth.py  db.py
tg_bot/utils/: states.py
(+48 files in other folders)
